fix style when title is too long

--- a/source/styles/toc.styl
+++ b/source/styles/toc.styl
@@ -15,19 +15,20 @@
         li {
             list-style: none
             white-space: nowrap
-
-
-        }}
-
-    }
-    .active {
-        background: #e5e9ef
-        display: block
-        width: 180px
-        margin-left: -10px
-        padding-left: 10px
-        height: 25px
-        line-height: 25px
-        border-left: 3px solid #34495e
-        box-shadow: 1px 1px 1px #ddd
+            .toc-link {
+                white-space: pre-wrap
+            }
         }
+    }
+}
+
+.active {
+    background: #e5e9ef
+    display: block
+    width: 180px
+    margin-left: -10px
+    padding-left: 10px
+    line-height: 25px
+    border-left: 3px solid #34495e
+    box-shadow: 1px 1px 1px #ddd
+}
